# camp_core

./: .gitignore  README.md  debug_camp_select_pipeline.sh  run_experiments_select.sbatch
adaptive-prediction/config/: env_freeze.txt
adaptive-prediction/data/: nuscenes
adaptive-prediction/experiments/nuScenes/: preprocess_challenge_splits.py
adaptive-prediction/scripts/: fix_nusc_dims.sh  patch_nusc_xy.sh  register_nusc_trajdata.py  train_nusc_baseline.sh
camp_core/: README.md  pyproject.toml  requirements.txt
camp_core/camp_core/: __init__.py
camp_core/camp_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
camp_core/camp_core/atoms/: __init__.py  base.py  driver_atoms.py
camp_core/camp_core/base_predictor/: trajectron_adapter.py  trajectron_loader.py
camp_core/camp_core/data_interfaces/: nuscenes_trajdata_bridge.py
camp_core/camp_core/inner_solver/: __init__.py  driver_solver.py
camp_core/camp_core/mapping_heads/: __init__.py  base.py  linear_head.py
camp_core/camp_core/outer_master/: __init__.py  benders_master.py  parametric_torch_master.py
camp_core/camp_core/utils/: __init__.py  metrics.py
data/: training_data_debug.pkl  training_data_small.pkl
envs/: camp-adaptive-env.yml
scripts/data_gen/: generate_training_data.py
scripts/eval/: eval_camp_inference.py
scripts/experiments/: compare_finetuning.py  compare_methods.py  determine_head_embedding_only.py
scripts/tools/: compute_atom_scales.py
scripts/train/: train_camp_lambda_only.py  train_camp_level_a.py  train_reranker.py
(+7 files in other folders)
